tests/parser/should_fail/T17879b.hs
module Main where

_ :: ()
_ = ()
