tests/parser/should_fail/T17879b.stderr

T17879b.hs:3:1: error: [GHC-94426]
    Invalid type signature:
    A type signature should be of form <variables> :: <type>.
